Vendor code-style
Signed-off-by: Ikey Doherty <ikey@serpentos.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/moss-core"]
 	path = external/moss-core
 	url = https://gitlab.com/serpent-os/core/moss-core.git
+[submodule "code-style"]
+	path = code-style
+	url = https://gitlab.com/serpent-os/core/code-style.git
