--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "code-style"]
-	path = code-style
-	url = https://gitlab.com/serpent-os/core/code-style.git
+[submodule "serpent-style"]
+	path = serpent-style
+	url = https://gitlab.com/serpent-os/core/serpent-style.git
