mapping.d: Move U/GID mapping code here

--- a/meson.build
+++ b/meson.build
@@ -35,6 +35,7 @@ libcontainer_sources = [
 	'source/moss/container/context.d',
 	'source/moss/container/fakeroot.d',
 	'source/moss/container/filesystem.d',
+	'source/moss/container/mapping.d',
 	'source/moss/container/package.d',
 	'source/moss/container/process.d',
 ]
